kubernetes/base/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: security-demo-api-mtls
  namespace: default
spec:
  mtls:
    mode: STRICT
