kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: security-demo-api
spec:
  selector:
    app: security-demo-api
  ports:
    - port: 8080
      targetPort: 8080
