kubernetes/base/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: security-demo-api-allow-test-client
  namespace: default
spec:
  selector:
    matchLabels:
      app: security-demo-api

  action: ALLOW

  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/default/sa/security-test-client"
